--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.Bubbles.MainActivity">
+    tools:context="com.example.bubbles.MainActivity">
 
     <ImageView
         android:id="@+id/backgroundImageView"
